<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_get_deivce_info"
        android:title="@string/get_finger_info"
        android:orderInCategory="100" android:showAsAction="always" />
    <item android:id="@+id/lcd_customer_sreen"
        android:title="@string/lcd_customer_sreen"
        android:orderInCategory="100" 
        android:showAsAction="always"/>
     <item android:id="@+id/menu_get_qposinfo"
        android:title="@string/get_info"
        android:orderInCategory="100" android:showAsAction="always" />
     <item android:id="@+id/menu_get_moduleNumber"
        android:title="@string/get_module_number"
        android:orderInCategory="100" android:showAsAction="always" />
     <item android:id="@+id/menu_get_serialNumbers"
        android:title="@string/get_serial_number"
        android:orderInCategory="100" android:showAsAction="always" />
</menu>
